--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
 
   <body>
 
-    <div class="map">
-      <div class="grid"></div>
-    </div>
+    <div class="map"></div>
 
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="script5.js"></script>
   </body>
 </html>
